fixed footer issue that caused double scrollbars to show up.

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -86,8 +86,14 @@ h4 {
 #footer {
   background-color: rgb(72, 133, 72);
   height: 50px;
-  position: absolute;
+  position: fixed;
   width: 100%;
+  bottom: 0px;
+  z-index: 100;
+}
+
+.footer-placeholder {
+  height: 100px;
 }
 
 .p-details {
